k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: delivery-tracking
  labels:
    name: delivery-tracking
